--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header class="cabecera">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="../index.html"
           ><h6>
             CONGREGACION NORTE
             <svg
@@ -57,8 +57,17 @@
         >
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-light " href="#"
-                >Ayuda con la navegacion</a>
+              <a
+                class="nav-link text-light"
+                href="https://api.whatsapp.com/send?phone=543435363451&text=Necesito%20ayuda%20con%20el%20sitio%20web!%F0%9F%98%A9"
+                target="_blank"
+                >Ayuda con la navegacion</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="../index.html"
+                >Volver a la pantalla principal</a
+              >
             </li>
           </ul>
         </div>
@@ -71,7 +80,10 @@
         <div class="card-body">
           <h5 class="card-title">No te olvides de enviar tu informe!</h5>
           <p class="card-text">Podes hacerlo desde el siguiente link</p>
-          <a href="#" class="btn btn-primary botonFormu"
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdryGs7g5qsqnBrCQYFRRAVqLVHdTZy2ZS4bSKrqon5v6Me5g/viewform?usp=sf_link"
+            target="_blank"
+            class="btn btn-primary botonFormu"
             >Completar formulario
           </a>
         </div>
@@ -84,18 +96,21 @@
             <p class="text-align-center">
               Vea el cronograma de arreglos para la predicacion con carritos.
             </p>
-            <br>
+            <br />
             <p>
-              <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
+              <a class="btn btn-redir" href="./pages/carritos.html"
+                >Ver cronograma &raquo;</a
+              >
             </p>
           </div>
           <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
             <img src="./images/reunion.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">REUNIONES</h2>
             <p class="text-align-center">
-              Vea dias, horarios y asignaciones de nuestras reuniones cristianas.
+              Vea dias, horarios y asignaciones de nuestras reuniones
+              cristianas.
             </p>
-            <br>
+            <br />
             <p>
               <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
             </p>
@@ -104,7 +119,8 @@
             <img src="./images/salidas.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">PREDICACION</h2>
             <p class="text-align-center">
-              Vea el cronograma de arreglos para la predicacion de casa en casa/publica/zoom.
+              Vea el cronograma de arreglos para la predicacion de casa en
+              casa/publica/zoom.
             </p>
             <p>
               <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
@@ -114,7 +130,8 @@
             <img src="./images/limpieza.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">LIMPIEZA</h2>
             <p class="text-align-center">
-              Vea el cronograma de arreglos de limpieza por grupos y recomendaciones pertinentes.
+              Vea el cronograma de arreglos de limpieza por grupos y
+              recomendaciones pertinentes.
             </p>
             <p>
               <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
@@ -128,10 +145,11 @@
       </div>
     </main>
 
-    <footer>
-      <footer class="text-center text-lg-start">
-        <div class="text-center p-3">© 2022 Copyright</div>
-      </footer>
+    <footer class="text-center text-lg-start">
+      <div class="text-center p-3">
+        © 2022 - Por favor no compartas esta web! es para uso interno exlusivo
+        de la congregacion norte
+      </div>
     </footer>
   </body>
   <script
