--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header class="cabecera">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="../index.html"
+        <a class="navbar-brand" href="./index.html"
           ><h6>
             CONGREGACION NORTE
             <svg
@@ -65,7 +65,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="../index.html"
+              <a class="nav-link text-light" href="./index.html"
                 >Volver a la pantalla principal</a
               >
             </li>
@@ -88,9 +88,11 @@
           </a>
         </div>
       </div>
+    
+      <br><br><br>
       <div class="container mt-3">
         <div class="row">
-          <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-6">
             <img src="./images/img1.webp" class="circulo mt-1" />
             <h2 class="text-center fw-normal">CARRITOS</h2>
             <p class="text-align-center">
@@ -103,7 +105,7 @@
               >
             </p>
           </div>
-          <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
+          <!-- <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
             <img src="./images/reunion.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">REUNIONES</h2>
             <p class="text-align-center">
@@ -125,8 +127,8 @@
             <p>
               <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
             </p>
-          </div>
-          <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
+          </div> -->
+          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-6">
             <img src="./images/limpieza.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">LIMPIEZA</h2>
             <p class="text-align-center">
@@ -134,7 +136,7 @@
               recomendaciones pertinentes.
             </p>
             <p>
-              <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
+              <a class="btn btn-redir" href="./pages/limpieza.html">Ver cronograma &raquo;</a>
             </p>
           </div>
           <!-- <div class="col-6 col-md-4 col-lg-3">5</div>
@@ -142,6 +144,10 @@
           <div class="col-6 col-md-4 col-lg-3">7</div>
           <div class="col-6 col-md-4 col-lg-3">8</div> -->
         </div>
+      </div>
+      <br><br>
+      <div class="alert alert-primary" role="alert">
+        Los grupos encargados de la limpieza en la proxima reunion son: Grupos 7 y 3.
       </div>
     </main>
 
