Se agrega seccion predicacion

--- a/index.html
+++ b/index.html
@@ -92,17 +92,16 @@
       <br><br><br>
       <div class="container mt-3">
         <div class="row">
-          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-6">
+          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-4">
             <img src="./images/img1.webp" class="circulo mt-1" />
             <h2 class="text-center fw-normal">CARRITOS</h2>
             <p class="text-align-center">
               Vea el cronograma de arreglos para la predicacion con carritos.
             </p>
-            <br />
+            <br>
             <p>
               <a class="btn btn-redir" href="./pages/carritos.html"
-                >Ver cronograma &raquo;</a
-              >
+                >Ver cronograma &raquo;</a>
             </p>
           </div>
           <!-- <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
@@ -116,25 +115,27 @@
             <p>
               <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
             </p>
-          </div>
-          <div class="secciones col-12 col-sm-6 col-md-4 col-lg-3">
+          </div> -->
+          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-4">
             <img src="./images/salidas.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">PREDICACION</h2>
             <p class="text-align-center">
               Vea el cronograma de arreglos para la predicacion de casa en
               casa/publica/zoom.
             </p>
+            <br>
             <p>
-              <a class="btn btn-redir" href="#">Ver cronograma &raquo;</a>
+              <a class="btn btn-redir" href="./pages/salidas.html">Ver cronograma &raquo;</a>
             </p>
-          </div> -->
-          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-6">
+          </div> 
+          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-4">
             <img src="./images/limpieza.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">LIMPIEZA</h2>
             <p class="text-align-center">
               Vea el cronograma de arreglos de limpieza por grupos y
               recomendaciones pertinentes.
             </p>
+            <br>
             <p>
               <a class="btn btn-redir" href="./pages/limpieza.html">Ver cronograma &raquo;</a>
             </p>
@@ -147,7 +148,7 @@
       </div>
       <br><br>
       <div class="alert alert-primary" role="alert">
-        Los grupos encargados de la limpieza en la proxima reunion son: Grupos 7 y 3.
+        Los grupos encargados de la limpieza en la proxima reunion son: Grupos 4 y 1.
       </div>
     </main>
 
