--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
       </div>
     </footer>
   </body>
+  <script src="./js/api-clima.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
