cambios de semana del 10/10

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </a>
         </div>
         <div class="alert alert-primary" role="alert">
-          Los grupos encargados de la limpieza en la proxima reunion son: Grupos 2 y 5.
+          El grupo encargado de la limpieza en la proxima reunion es: Grupo 6.
         </div>
         <!-- <div id="clima">
 
