Actualizacion semana del 17/10

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             >Completar formulario
           </a>
         </div>
-        <div class="alert alert-primary" role="alert">
+        <!-- <div class="alert alert-primary" role="alert">
           El grupo encargado de la limpieza en la proxima reunion es: Grupo 6.
-        </div>
+        </div> -->
         <!-- <div id="clima">
 
         </div> -->
