En salidas html puse mapa, y centré titulo.

--- a/pages/salidas.html
+++ b/pages/salidas.html
@@ -76,7 +76,7 @@
 
     <main>
       <img class="img-carrito" src="../images/banner-predicacion.jpg" alt="">
-      <h1 class="ml-4 m-5">
+      <h1 class="text-center ml-4 m-5">
         Arreglos vigentes para la <span class="badge">predicacion</span>
       </h1>
      
@@ -134,6 +134,13 @@
             <a class="btn btn-carrito btn-primary" href="#" role="button">Link</a>
           </div> -->
     </main>
+    <br>
+    <h1 class="text-center m-2">Mapa Territorios</h1>      
+    <div class="pt-4 container">
+      <div class="text-center">
+      <img src="../images/imgMapaTerritorio.jpeg" width="100%">   
+      </div>
+    </div>
     <footer class="text-center text-lg-start">
       <div class="text-center p-3 text-danger">
         © 2022 - Por favor no compartas esta web! es para uso interno y exlusivo
