reseteo pagina semana 24/10

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
             <img src="./images/limpieza.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">LIMPIEZA</h2>
             <p class="text-align-center">
-              Vea el cronograma de arreglos de limpieza por grupos y
-              recomendaciones pertinentes.
+              Vea el cronograma de arreglos de limpieza por grupos
             </p>
             <br>
             <p>
