--- a/pages/limpieza.html
+++ b/pages/limpieza.html
@@ -75,7 +75,7 @@
     </header>
     <main>
       <img class="img-carrito" src="../images/banner limpieza.jpg" alt="">
-      <h1 class="ml-4 m-5">
+      <h1 class="ml-4 m-5 text-center">
         Arreglos vigentes de <span class="badge">Limpieza</span>
       </h1>
 
