--- a/pages/salidas.html
+++ b/pages/salidas.html
@@ -76,7 +76,7 @@
 
     <main>
       <img class="img-carrito" src="../images/banner-predicacion.jpg" alt="">
-      <h1 class="ml-4 m-5">
+      <h1 class="ml-4 m-5 text-center">
         Arreglos vigentes para la <span class="badge">predicacion</span>
       </h1>
      
