Se centra el div de limpieza en punto quiebre

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <a class="btn btn-redir" href="./pages/salidas.html">Ver cronograma &raquo;</a>
             </p>
           </div> 
-          <div class="secciones col-12 col-sm-6 col-md-6 col-lg-4">
+          <div class="secciones mx-auto col-12 col-sm-6 col-md-6 col-lg-4">
             <img src="./images/limpieza.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">LIMPIEZA</h2>
             <p class="text-align-center">
