arreglo text card

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
             <img src="./images/salidas.jpg" class="circulo mt-1" />
             <h2 class="text-center fw-normal">PREDICACION</h2>
             <p class="text-align-center">
-              Vea el cronograma de arreglos para la predicacion de casa en
-              casa/publica/zoom.
+              Vea el cronograma de arreglos para la predicacion de casa/publica/zoom.
             </p>
             <br>
             <p>
