--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </a>
         </div>
         <div class="alert alert-primary" role="alert">
-          Los grupos encargados de la limpieza de esta semana son: Grupos 2 y 5.
+          El grupo encargado de la limpieza de esta semana son: Grupo 6.
         </div>
         <!-- <div id="clima">
 
