--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             >Completar formulario
           </a>
         </div>
-        <div class="alert alert-primary" role="alert">
+        <!-- <div class="alert alert-primary" role="alert">
           Los grupos encargados de la limpieza de esta semana son: Grupos 4 y 1.
-        </div>
+        </div> -->
         <!-- <div id="clima">
 
         </div> -->
