--- a/pages/salidas.html
+++ b/pages/salidas.html
@@ -86,10 +86,10 @@
 
       <div class="arregloCarritos mt-3 row justify-content-center">
         <!-- <div id="listado-de-arreglos" class="planillaCarritos col-auto text-center"></div> -->
-        <!-- <iframe
+        <iframe
           class="planillaCarritos plan-salidas col-auto text-center"
           src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTNchNWAQP4iYQFhtzIu2EX6W4y_8OfTIeln9u6_aVOp-tJbp1VJXvqO3RjdoBk7w/pubhtml?gid=140628978&amp;single=false&amp;widget=false&amp;headers=false&amp;chrome=false"
-        ></iframe> -->
+        ></iframe>
       </div>
       <!-- <div class="arregloCarritos mt-3 row justify-content-center">
         <a
