--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <main>
       <div class="card text-center">
-        <div class="card-header"><h3>Diciembre 2022</h3></div>
+        <div class="card-header"><h3>Enero 2023</h3></div>
         <div class="card-body">
           <h5 class="card-title">No te olvides de enviar tu informe!</h5>
           <p class="card-text">Podes hacerlo desde el siguiente link</p>
@@ -84,6 +84,9 @@
         </div>
          <div class="alert alert-primary" role="alert">
           Los grupos encargados de la limpieza de esta semana son: Grupos 4 y 1.
+        </div>
+        <div class="alert alert-warning" role="alert">
+          La visita del superintendente de circuito sera la semana del 16/01/2023.
         </div> 
         <!-- <div id="clima">
 
