--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             >Completar formulario
           </a>
         </div>
-         <div class="alert alert-primary" role="alert">
-          Los grupos encargados de la limpieza de esta semana son: Grupos 4 y 1.
+        <div class="alert alert-primary" role="alert">
+          Los grupos encargados de la limpieza de esta semana son: Grupo 6.
         </div>
         <div class="alert alert-warning" role="alert">
           La visita del superintendente de circuito sera la semana del 16/01/2023.
