--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           </a>
         </div>
         <div class="alert alert-primary" role="alert">
-          Los grupos encargados de la limpieza de esta semana son: Grupo 6.
+          Los grupos encargados de la limpieza de esta semana son: Grupos 7 y 3.
         </div>
         <div class="alert alert-warning" role="alert">
-          La visita del superintendente de circuito sera la semana del 16/01/2023.
+          Estamos en la semana de la visita!!.
         </div> 
         <!-- <div id="clima">
 
