--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </a>
         </div>
         <div class="alert alert-primary" role="alert">
-          Los grupos encargados de la limpieza de esta semana son: Grupo 6.
+          Los grupos encargados de la limpieza de esta semana son: Grupos 7 y 1.
         </div>
         
         <!-- <div id="clima">
