--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <main>
       <div class="card text-center">
-        <div class="card-header"><h3>Abril 2023</h3></div>
+        <div class="card-header"><h3>Julio 2023</h3></div>
         <div class="card-body">
           <h5 class="card-title">No te olvides de enviar tu informe!</h5>
           <p class="card-text">Podes hacerlo desde el siguiente link</p>
@@ -83,7 +83,7 @@
           </a>
         </div>
         <div class="alert alert-primary" role="alert">
-          Los grupos encargados de la limpieza de esta semana son: .
+          Los grupos encargados de la limpieza de esta semana son: Grupo 6.
         </div>
         
         <div id="clima" class=""></div>
